# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## 4.0.7 - 2025-08-04
### Added
- New "do not expire" setting on invoices, to prevent them from being automatically expired.


## 4.0.6 - 2025-07-17
### Fixed
- Emergency numbers exports when associated to parent.
- Logging everyone out is now done in an asynchronous way.


## 4.0.5 - 2025-05-05
### Fixed
- Navigation issue in wizard
- AVS lookup in childre app


## 4.0.4 - 2025-04-23
### Fixed
- Issue when children import file lacks ID for some children
- Display issue in import form

## 4.0.3 - 2025-04-10
### Added
Child marked_up_price

## 4.0.2 - 2025-04-04
### Changed
- Email attachments can be removed
- mails can be erased from cache


## 4.0.1 - 2025-03-27
### Added
Child lookup based on avs number

## 4.0.0 - 2025-03-18
### Changed
New registration wizard app.


## 3.10.4 2025-01-13
### Changed
Various version bumps. There was an issue with ckeditor.


## 3.10.3 2025-01-06
### Fixed
- Issue where you might try to cancel several time a registration to the same course
- Issue when creating a course instructor using the backend view


## 3.10.2 2024-10-07
### Fixed
- Regression introduced in 3.10.0 where the waiting lists were not displayed anymore
- Issue in waiting slots admin where the search was not working
- Timezone issue when rendering xls export of invoices (payment date column)


## 3.10.1 2024-10-02
### Fixed
- Memcached compatibility with Django 3.2
- Do not display register button for courses that are disabled

## 3.10.0 2024-09-27
### Added
- Possibility to allow or disallow registrations for a given course

## 3.9.2 2024-09-11
### Changed
- Better XLS output for invoices. Ordered as in the view, columns with a nice width.


## 3.9.1 2024-09-06
### Fixed