@@ -48,6 +48,7 @@
 
     {{ form.send_copy|as_crispy_field }}
     {{ form.copy_all_instructors|as_crispy_field }}
+    {{ form.copy_all_admins|as_crispy_field }}
 
     <div class="form-group">
       <button type="submit" class="btn btn-success btn-large">
