@@ -8,6 +8,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## 4.0.7 - 2025-08-04
 ### Added
 - New "do not expire" setting on invoices, to prevent them from being automatically expired.
+- New copy to admin option for course supervisors.
 
 
 ## 4.0.6 - 2025-07-17
